# ungar

./: .gitignore  Cargo.toml  README.md
game_configs/: kuhn.json  kuhn_action_abstraction.json  kuhn_card_abstraction.json  kuhn_cfr_config.json  leduc.json  leduc_action_abstraction.json  leduc_card_abstraction.json  leduc_cfr_config.json
scripts/: kuhn-train.sh
src/: abstract_game.rs  action_abstraction.rs  agent.rs  card_abstraction.rs  card_util.rs  cfr.rs  game.rs  lib.rs  node.rs  play.rs  strategy.rs
